@@ -11,33 +11,10 @@
 	<packaging>jar</packaging>
 	<dependencies>
 		<dependency>
-			<groupId>dk.sdu.cbse</groupId>
-			<artifactId>featuretracerlite</artifactId>
-			<version>1.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
 			<version>6.8.21</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	<build>
-		<plugins>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.2</version>
-				<configuration>
-					<argLine>
-						-javaagent:${settings.localRepository}/org/aspectj/aspectjweaver/1.9.9/aspectjweaver-1.9.9.jar --add-opens java.base/java.lang=ALL-UNNAMED
-						--add-opens java.base/java.lang=ALL-UNNAMED
-					</argLine>
-					<useSystemClassLoader>true</useSystemClassLoader>
-					<forkMode>always</forkMode>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
 </project>
